--- a/mindex.html
+++ b/mindex.html
@@ -138,7 +138,7 @@
 				margin: 0;
 				padding: 0;
 				text-align: center;
-				transition: font-size 0.3s ease; /* Плавное изменение размера шрифта */
+				transition: font-size 0.0s ease; /* Плавное изменение размера шрифта */
 				word-wrap: break-word; /* Разрешаем перенос слов */
 			}			
 
@@ -971,7 +971,7 @@
                 ]
             },
             {
-                question: "Иногда лучше жевать, чем говорить трататататататататта тататт атат атттатта та!",
+                question: "Иногда лучше жевать, чем говорить трататататататататта тататт а",
                 answers: [
                     { text: "Stimorol", correct: true, image: "images/stimorol.jpg" },
                     { text: "Orbit", correct: false, image: "images/orbit.jpg" },
