--- a/mindex.html
+++ b/mindex.html
@@ -971,7 +971,7 @@
                 ]
             },
             {
-                question: "Иногда лучше жевать, чем говорить трататататататататта тататт а",
+                question: "Иногда лучше жевать, чем говорить",
                 answers: [
                     { text: "Stimorol", correct: true, image: "images/stimorol.jpg" },
                     { text: "Orbit", correct: false, image: "images/orbit.jpg" },
