--- a/mindex.html
+++ b/mindex.html
@@ -589,35 +589,63 @@
         }
 
         // Функция для отображения вопроса
-        function showQuestion() {
-            console.log("Показ вопроса..."); // Лог для отладки
-            if (currentQuestionIndex >= currentQuestions.length) {
-                endGame();
-                return;
-            }
+		function showQuestion() {
+			console.log("Показ вопроса...");
 
-            resetTimer();
-            startTimer();
+			if (currentQuestionIndex >= currentQuestions.length) {
+				endGame();
+				return;
+			}
 
-            const question = currentQuestions[currentQuestionIndex];
-            questionElement.innerText = question.question;
-            answerSection.innerHTML = '';
+			resetTimer();
+			startTimer();
 
-            const shuffledAnswers = shuffleArray([...question.answers]);
-            shuffledAnswers.forEach(answer => {
-                const button = document.createElement('div');
-                button.classList.add('answer');
-                button.innerHTML = `<img src="${answer.image}" alt="${answer.text}">`;
+			const question = currentQuestions[currentQuestionIndex];
+			const questionElement = document.getElementById('question');
+			const answerSection = document.getElementById('answer-section');
 
-                button.addEventListener('click', () => removeAnswer(button, answer));
+			// Анимация исчезновения предыдущего вопроса (только для Chrome/Windows)
+			if (platform !== 'iOS/Safari') {
+				questionElement.classList.add('fade-out');
+				answerSection.classList.add('fade-out');
+			}
 
-                if ('ontouchstart' in window) {
-                    addSwipeListener(button, answer);
-                }
+			// Ждем завершения анимации исчезновения
+			setTimeout(() => {
+				// Обновляем текст вопроса и ответы
+				questionElement.innerText = question.question;
+				answerSection.innerHTML = '';
 
-                answerSection.appendChild(button);
-            });
-        }
+				const shuffledAnswers = shuffleArray([...question.answers]);
+				shuffledAnswers.forEach(answer => {
+					const button = document.createElement('div');
+					button.classList.add('answer');
+					button.innerHTML = `<img src="${answer.image}" alt="${answer.text}">`;
+
+					button.addEventListener('click', () => removeAnswer(button, answer));
+
+					if ('ontouchstart' in window) {
+						addSwipeListener(button, answer);
+					}
+
+					answerSection.appendChild(button);
+				});
+
+				// Анимация появления нового вопроса (только для Chrome/Windows)
+				if (platform !== 'iOS/Safari') {
+					questionElement.classList.remove('fade-out');
+					answerSection.classList.remove('fade-out');
+					questionElement.classList.add('fade-in');
+					answerSection.classList.add('fade-in');
+
+					// Убираем классы анимации после завершения
+					setTimeout(() => {
+						questionElement.classList.remove('fade-in');
+						answerSection.classList.remove('fade-in');
+					}, 700); // Время анимации
+				}
+			}, 700); // Время анимации исчезновения
+		}
 
         // Функция для удаления ответа
         function removeAnswer(button, answer) {
