--- a/mindex.html
+++ b/mindex.html
@@ -1032,7 +1032,17 @@
                     { text: "Dirol", correct: false, image: "images/dirol.jpg" },
                     { text: "Juicy Fruit", correct: false, image: "images/juicyfruit.jpg" }
                 ]
-            }
+            },
+            {
+                question: "Тает во рту, а не в руках",
+                answers: [
+                    { text: "M&M’s", correct: true, image: "images/mms.jpg" },
+                    { text: "KitKat", correct: false, image: "images/kitkat.jpg" },
+                    { text: "Hershy's", correct: false, image: "images/hershy.jpg" },
+                    { text: "Snickers", correct: false, image: "images/snickers.jpg" }
+                ]
+            }			
+			
             // Добавьте больше вопросов здесь
         ];
     </script>
