--- a/mindex.html
+++ b/mindex.html
@@ -1036,7 +1036,7 @@
             {
                 question: "Тает во рту, а не в руках",
                 answers: [
-                    { text: "M&M’s", correct: true, image: "images/mms.jpg" },
+                    { text: "M&M’s", correct: true, image: "images/mmdms.jpg" },
                     { text: "KitKat", correct: false, image: "images/kitkat.jpg" },
                     { text: "Hershy's", correct: false, image: "images/hershy.jpg" },
                     { text: "Snickers", correct: false, image: "images/snickers.jpg" }
