--- a/mindex.html
+++ b/mindex.html
@@ -1041,6 +1041,15 @@
                     { text: "Hershy's", correct: false, image: "images/hershy.jpg" },
                     { text: "Snickers", correct: false, image: "images/snickers.jpg" }
                 ]
+            },	
+            {
+				question: "Цены просто о*уеть",
+					answers: [
+						{ text: "Евросеть", correct: true, image: "images/euroset.jpg" },
+						{ text: "М.Видео", correct: false, image: "images/mvideo.jpg" },
+						{ text: "Эльдорадо", correct: false, image: "images/eldorado.jpg" },
+						{ text: "Textasy", correct: false, image: "images/textasy.jpg" }
+                ]
             }			
 			
             // Добавьте больше вопросов здесь
