--- a/mindex.html
+++ b/mindex.html
@@ -1043,6 +1043,15 @@
                 ]
             },	
             {
+                question: "Потому и не кусают",
+                answers: [
+                    { text: "Москитол", correct: true, image: "images/mosquitall.jpg" },
+                    { text: "Комарофф", correct: false, image: "images/komaroff.jpg" },
+                    { text: "Фумитокс", correct: false, image: "images/fumitoks.jpg" },
+                    { text: "Раптор", correct: false, image: "images/raptor.jpg" }
+                ]
+            },			
+            {
 				question: "Цены просто о*уеть",
 					answers: [
 						{ text: "Евросеть", correct: true, image: "images/euroset.jpg" },
