--- a/mindex.html
+++ b/mindex.html
@@ -1050,6 +1050,15 @@
                     { text: "Фумитокс", correct: false, image: "images/fumitoks.jpg" },
                     { text: "Раптор", correct: false, image: "images/raptor.jpg" }
                 ]
+            },	
+            {
+                question: "Он такой один",
+                answers: [
+                    { text: "Тинькофф", correct: true, image: "images/tinkoff.jpg" },
+                    { text: "Сбербанк", correct: false, image: "images/sberbank2.jpg" },
+                    { text: "Альфа-Банк", correct: false, image: "images/alfabank2.jpg" },
+                    { text: "ВТБ", correct: false, image: "images/vtb2.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
