--- a/mindex.html
+++ b/mindex.html
@@ -1059,6 +1059,15 @@
                     { text: "Альфа-Банк", correct: false, image: "images/alfabank2.jpg" },
                     { text: "ВТБ", correct: false, image: "images/vtb2.jpg" }
                 ]
+            },
+            {
+                question: "Танки грязи не боятся",
+                answers: [
+                    { text: "КАМАЗ", correct: true, image: "images/kamaz.jpg" },
+                    { text: "УАЗ", correct: false, image: "images/uaz.jpg" },
+                    { text: "ГАЗ", correct: false, image: "images/gaz.jpg" },
+                    { text: "МАЗ", correct: false, image: "images/maz.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
