--- a/mindex.html
+++ b/mindex.html
@@ -1068,7 +1068,25 @@
                     { text: "ГАЗ", correct: false, image: "images/gaz.jpg" },
                     { text: "МАЗ", correct: false, image: "images/maz.jpg" }
                 ]
-            },			
+            },
+            {
+                question: "Люди говорят",
+                answers: [
+                    { text: "МТС", correct: true, image: "images/mts.jpg" },
+                    { text: "Билайн", correct: false, image: "images/beeline.jpg" },
+                    { text: "МегаФон", correct: false, image: "images/megafon.jpg" },
+                    { text: "Tele2", correct: false, image: "images/tele2.jpg" }
+                ]
+            },
+            {
+                question: "Живи на яркой стороне",
+                answers: [
+                    { text: "Билайн", correct: true, image: "images/beeline2.jpg" },
+                    { text: "МТС", correct: false, image: "images/mts2.jpg" },
+                    { text: "МегаФон", correct: false, image: "images/megafon2.jpg" },
+                    { text: "Yota", correct: false, image: "images/yota.jpg" }
+                ]
+            },				
             {
 				question: "Цены просто о*уеть",
 					answers: [
