--- a/mindex.html
+++ b/mindex.html
@@ -1086,6 +1086,15 @@
                     { text: "МегаФон", correct: false, image: "images/megafon2.jpg" },
                     { text: "Yota", correct: false, image: "images/yota.jpg" }
                 ]
+            },
+            {
+                question: "С нами удобно",
+                answers: [
+                    { text: "Билайн", correct: true, image: "images/beeline3.jpg" },
+                    { text: "МТС", correct: false, image: "images/mts3.jpg" },
+                    { text: "МегаФон", correct: false, image: "images/megafon3.jpg" },
+                    { text: "Tele2", correct: false, image: "images/tele3.jpg" }
+                ]
             },				
             {
 				question: "Цены просто о*уеть",
