--- a/mindex.html
+++ b/mindex.html
@@ -1095,7 +1095,16 @@
                     { text: "МегаФон", correct: false, image: "images/megafon3.jpg" },
                     { text: "Tele2", correct: false, image: "images/tele3.jpg" }
                 ]
-            },				
+            },
+            {
+                question: "Дешевле только молчание",
+                answers: [
+                    { text: "Московская сотовая", correct: true, image: "images/mss4.jpg" },
+                    { text: "МТС", correct: false, image: "images/mts4.jpg" },
+                    { text: "МегаФон", correct: false, image: "images/megafon4.jpg" },
+                    { text: "Билайн", correct: false, image: "images/beeline4.jpg" }
+                ]
+            },			
             {
 				question: "Цены просто о*уеть",
 					answers: [
