--- a/mindex.html
+++ b/mindex.html
@@ -1113,7 +1113,16 @@
                     { text: "Yota", correct: false, image: "images/yota5.jpg" },
                     { text: "Билайн", correct: false, image: "images/beeline5.jpg" }
                 ]
-            },				
+            },
+            {
+                question: "Связывая людей, мы делаем их свободными",
+                answers: [
+                    { text: "Крастелеком", correct: true, image: "images/ktk6.jpg" },
+                    { text: "МТС", correct: false, image: "images/mts6.jpg" },
+                    { text: "Ростелеком", correct: false, image: "images/rtk6.jpg" },
+                    { text: "Билайн", correct: false, image: "images/beeline6.jpg" }
+                ]
+            },			
             {
 				question: "Цены просто о*уеть",
 					answers: [
