--- a/mindex.html
+++ b/mindex.html
@@ -136,7 +136,7 @@
 			
 			#question {
 				margin: 0;
-				padding: 0;
+				padding: 10px;
 				text-align: center;
 				transition: font-size 0.0s ease; /* Плавное изменение размера шрифта */
 				white-space: nowrap;
@@ -436,7 +436,7 @@
 		function adjustFontSize() {
 			const questionSection = document.getElementById('question-section');
 
-			const maxFontSize = 32; // Максимальный размер шрифта
+			const maxFontSize = 34; // Максимальный размер шрифта
 			const minFontSize = 16; // Минимальный размер шрифта
 			let fontSize = maxFontSize;
 
