--- a/mindex.html
+++ b/mindex.html
@@ -135,8 +135,8 @@
 			}
 			
 			#question {
-				margin: 0;
-				padding: 10px;
+				margin: 5px;
+				padding: 0;
 				text-align: center;
 				transition: font-size 0.0s ease; /* Плавное изменение размера шрифта */
 				white-space: nowrap;
