--- a/mindex.html
+++ b/mindex.html
@@ -129,18 +129,17 @@
 				align-items: center;
 				background-color: #007bff;
 				color: white;
-				overflow: hidden; /* Скрываем текст, который не помещается */
+				overflow: hidden; /* Скрываем текст, который не помещается */			
 				padding: 10px; /* Отступы внутри контейнера */
 				box-sizing: border-box; /* Учитываем padding в размерах */
 			}
 			
 			#question {
-				margin: 5px;
-				padding: 0;
+				margin: 10px 10px;
+				padding: 10px 10px;
 				text-align: center;
 				transition: font-size 0.0s ease; /* Плавное изменение размера шрифта */
-				white-space: nowrap;
-				/* word-wrap: break-word; /* Разрешаем перенос слов */
+				word-wrap: break-word; /* Разрешаем перенос слов */
 			}			
 
             #progress-bar {
