--- a/mindex.html
+++ b/mindex.html
@@ -135,8 +135,8 @@
 			}
 			
 			#question {
-				margin: 10px 10px;
-				padding: 10px 10px;
+				margin: 10px 15px;
+				padding: 10px 15px;
 				text-align: center;
 				transition: font-size 0.0s ease; /* Плавное изменение размера шрифта */
 				word-wrap: break-word; /* Разрешаем перенос слов */
@@ -436,7 +436,7 @@
 			const questionSection = document.getElementById('question-section');
 
 			const maxFontSize = 34; // Максимальный размер шрифта
-			const minFontSize = 16; // Минимальный размер шрифта
+			const minFontSize = 8; // Минимальный размер шрифта
 			let fontSize = maxFontSize;
 
 			// Устанавливаем начальный размер шрифта
@@ -1116,6 +1116,15 @@
             },
             {
                 question: "Связывая людей, мы делаем их свободными",
+                answers: [
+                    { text: "Крастелеком", correct: true, image: "images/ktk6.jpg" },
+                    { text: "МТС", correct: false, image: "images/mts6.jpg" },
+                    { text: "Ростелеком", correct: false, image: "images/rtk6.jpg" },
+                    { text: "Билайн", correct: false, image: "images/beeline6.jpg" }
+                ]
+            },
+            {
+                question: "Тиыолвтываодл аоывлдоаыл аоылвд ол солвофыоафыдвл сясыыф ывыфвыфвфывфывфыв bcvbcvbcvbcvbcv bvcbcvbcvb bcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcccxzcxz xcvcx xzcx xzcxzcz cxzc cxzcxv",
                 answers: [
                     { text: "Крастелеком", correct: true, image: "images/ktk6.jpg" },
                     { text: "МТС", correct: false, image: "images/mts6.jpg" },
