--- a/mindex.html
+++ b/mindex.html
@@ -1115,7 +1115,7 @@
                 ]
             },
             {
-                question: "Связывая людей, мы делаем их свободными",
+                question: "Связывая людей, мы делаем их свободными                  ",
                 answers: [
                     { text: "Крастелеком", correct: true, image: "images/ktk6.jpg" },
                     { text: "МТС", correct: false, image: "images/mts6.jpg" },
@@ -1124,7 +1124,7 @@
                 ]
             },
             {
-                question: "Тиыолвтываодл аоывлдоаыл аоылвд ол солвофыоафыдвл сясыыф ывыфвыфвфывфывфыв bcvbcvbcvbcvbcv bvcbcvbcvb bcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcccxzcxz xcvcx xzcx xzcxzcz cxzc cxzcxv",
+                question: "Тиыолвтываодл аоывлдоаыл аоылвд ол солвофыоафыдвл сясыыф ывыфвыфвфывфывфыв bcvbcvbcvbcvbcv bvcbcvbcvb bcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbcvbc",
                 answers: [
                     { text: "Крастелеком", correct: true, image: "images/ktk6.jpg" },
                     { text: "МТС", correct: false, image: "images/mts6.jpg" },
