--- a/mindex.html
+++ b/mindex.html
@@ -1122,6 +1122,15 @@
                     { text: "Ростелеком", correct: false, image: "images/rtk6.jpg" },
                     { text: "Билайн", correct: false, image: "images/beeline6.jpg" }
                 ]
+            },
+            {
+                question: "Нужна ли реклама совершенству?",
+                answers: [
+                    { text: "BMW", correct: true, image: "images/bmw.jpg" },
+                    { text: "Mercedes-Benz", correct: false, image: "images/mercedes.jpg" },
+                    { text: "Audi", correct: false, image: "images/audi.jpg" },
+                    { text: "Lexus", correct: false, image: "images/lexsus.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
