--- a/mindex.html
+++ b/mindex.html
@@ -1140,6 +1140,15 @@
                     { text: "УАЗ", correct: false, image: "images/uaz2.jpg" },
                     { text: "КАМАЗ", correct: false, image: "images/kamaz2.jpg" }
                 ]
+            },
+            {
+                question: "Заведи любимую",
+                answers: [
+                    { text: "Daewoo", correct: true, image: "images/daewoo.jpg" },
+                    { text: "Hyundai", correct: false, image: "images/hyundai.jpg" },
+                    { text: "Kia", correct: false, image: "images/kia.jpg" },
+                    { text: "Chevrolet", correct: false, image: "images/chevrolet.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
