--- a/mindex.html
+++ b/mindex.html
@@ -1149,6 +1149,15 @@
                     { text: "Kia", correct: false, image: "images/kia.jpg" },
                     { text: "Chevrolet", correct: false, image: "images/chevrolet.jpg" }
                 ]
+            },
+            {
+                question: "Как ты смел",
+                answers: [
+                    { text: "Mazda", correct: true, image: "images/mazda.jpg" },
+                    { text: "Toyota", correct: false, image: "images/toyota.jpg" },
+                    { text: "Nissan", correct: false, image: "images/nissan.jpg" },
+                    { text: "Honda", correct: false, image: "images/honda.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
