--- a/mindex.html
+++ b/mindex.html
@@ -1158,6 +1158,15 @@
                     { text: "Nissan", correct: false, image: "images/nissan.jpg" },
                     { text: "Honda", correct: false, image: "images/honda.jpg" }
                 ]
+            },
+            {
+                question: "Управляй мечтой",
+                answers: [
+                    { text: "Toyota", correct: true, image: "images/toyota2.jpg" },
+                    { text: "Kia", correct: false, image: "images/kia2.jpg" },
+                    { text: "Nissan", correct: false, image: "images/nissan2.jpg" },
+                    { text: "Honda", correct: false, image: "images/honda2.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
