--- a/mindex.html
+++ b/mindex.html
@@ -1167,6 +1167,15 @@
                     { text: "Nissan", correct: false, image: "images/nissan2.jpg" },
                     { text: "Honda", correct: false, image: "images/honda2.jpg" }
                 ]
+            },
+            {
+                question: "Превосходя ожидания",
+                answers: [
+                    { text: "Nissan", correct: true, image: "images/nissan3.jpg" },
+                    { text: "Kia", correct: false, image: "images/kia3.jpg" },
+                    { text: "Toyota", correct: false, image: "images/toyota3.jpg" },
+                    { text: "Honda", correct: false, image: "images/honda3.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
