--- a/mindex.html
+++ b/mindex.html
@@ -1176,6 +1176,15 @@
                     { text: "Toyota", correct: false, image: "images/toyota3.jpg" },
                     { text: "Honda", correct: false, image: "images/honda3.jpg" }
                 ]
+            },
+            {
+                question: "Стремление к совершенству",
+                answers: [
+                    { text: "Lexus", correct: true, image: "images/lexsus4.jpg" },
+                    { text: "BMW", correct: false, image: "images/bmw4.jpg" },
+                    { text: "Audi", correct: false, image: "images/audi4.jpg" },
+                    { text: "Mercedes-Benz", correct: false, image: "images/mercedes4.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
