--- a/mindex.html
+++ b/mindex.html
@@ -1185,6 +1185,15 @@
                     { text: "Audi", correct: false, image: "images/audi4.jpg" },
                     { text: "Mercedes-Benz", correct: false, image: "images/mercedes4.jpg" }
                 ]
+            },
+            {
+                question: "Просто гениально",
+                answers: [
+                    { text: "Skoda", correct: true, image: "images/skoda.jpg" },
+                    { text: "Volkswagen", correct: false, image: "images/vw.jpg" },
+                    { text: "Renault", correct: false, image: "images/renault.jpg" },
+                    { text: "Peugeot", correct: false, image: "images/peugeot.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
