--- a/mindex.html
+++ b/mindex.html
@@ -1194,6 +1194,15 @@
                     { text: "Renault", correct: false, image: "images/renault.jpg" },
                     { text: "Peugeot", correct: false, image: "images/peugeot.jpg" }
                 ]
+            },
+            {
+                question: "Во имя добра!",
+                answers: [
+                    { text: "Овип Локос", correct: true, image: "images/sokol.jpg" },
+                    { text: "Domestos", correct: false, image: "images/domestos.jpg" },
+                    { text: "Comet", correct: false, image: "images/comet.jpg" },
+                    { text: "Мистер Пропер", correct: false, image: "images/mrproper.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
