--- a/mindex.html
+++ b/mindex.html
@@ -1203,7 +1203,16 @@
                     { text: "Comet", correct: false, image: "images/comet.jpg" },
                     { text: "Мистер Пропер", correct: false, image: "images/mrproper.jpg" }
                 ]
-            },			
+            },
+            {
+                question: "Там, где Россия",
+                answers: [
+                    { text: "Балтика", correct: true, image: "images/baltika.jpg" },
+                    { text: "Жигулёвское", correct: false, image: "images/zhiguli.jpg" },
+                    { text: "Клинское", correct: false, image: "images/klinskoe.jpg" },
+                    { text: "Арсенальное", correct: false, image: "images/arsenal.jpg" }
+                ]
+            },				
             {
 				question: "Цены просто о*уеть",
 					answers: [
