--- a/mindex.html
+++ b/mindex.html
@@ -1212,7 +1212,16 @@
                     { text: "Клинское", correct: false, image: "images/klinskoe.jpg" },
                     { text: "Арсенальное", correct: false, image: "images/arsenal.jpg" }
                 ]
-            },				
+            },
+            {
+                question: "Пиво с пробкой",
+                answers: [
+                    { text: "Патра", correct: true, image: "images/patra2.jpg" },
+                    { text: "Балтика", correct: false, image: "images/baltika2.jpg" },
+                    { text: "Тинькофф", correct: false, image: "images/tinkoff2.jpg" },
+                    { text: "Старый Мельник", correct: false, image: "images/melnik2.jpg" }
+                ]
+            },			
             {
 				question: "Цены просто о*уеть",
 					answers: [
