--- a/mindex.html
+++ b/mindex.html
@@ -1221,6 +1221,15 @@
                     { text: "Тинькофф", correct: false, image: "images/tinkoff2.jpg" },
                     { text: "Старый Мельник", correct: false, image: "images/melnik2.jpg" }
                 ]
+            },
+            {
+                question: "Надо чаще встречаться",
+                answers: [
+                    { text: "Золотая бочка", correct: true, image: "images/bochka4.jpg" },
+                    { text: "Балтика", correct: false, image: "images/baltika4.jpg" },
+                    { text: "Клинское", correct: false, image: "images/klinskoe4.jpg" },
+                    { text: "Сибирская корона", correct: false, image: "images/korona4.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
