--- a/mindex.html
+++ b/mindex.html
@@ -1230,6 +1230,15 @@
                     { text: "Клинское", correct: false, image: "images/klinskoe4.jpg" },
                     { text: "Сибирская корона", correct: false, image: "images/korona4.jpg" }
                 ]
+            },
+            {
+                question: "За качество отвечаю",
+                answers: [
+                    { text: "Солодов", correct: true, image: "images/solodov.jpg" },
+                    { text: "Балтика", correct: false, image: "images/baltika.jpg" },
+                    { text: "Клинское", correct: false, image: "images/klinskoe.jpg" },
+                    { text: "Жигулёвское", correct: false, image: "images/zhiguli.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
