--- a/mindex.html
+++ b/mindex.html
@@ -1239,6 +1239,15 @@
                     { text: "Клинское", correct: false, image: "images/klinskoe.jpg" },
                     { text: "Жигулёвское", correct: false, image: "images/zhiguli.jpg" }
                 ]
+            },
+            {
+                question: "Мы такие разные, и всё-таки мы вместе",
+                answers: [
+                    { text: "Доктор Дизель", correct: true, image: "images/drdisel.jpg" },
+                    { text: "Лукойл", correct: false, image: "images/lukoil.jpg" },
+                    { text: "Shell", correct: false, image: "images/shell.jpg" },
+                    { text: "BP", correct: false, image: "images/bp.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
