--- a/mindex.html
+++ b/mindex.html
@@ -1248,6 +1248,15 @@
                     { text: "Shell", correct: false, image: "images/shell.jpg" },
                     { text: "BP", correct: false, image: "images/bp.jpg" }
                 ]
+            },
+            {
+                question: "Совершенство бесценно",
+                answers: [
+                    { text: "Stella Artois", correct: true, image: "images/stella.jpg" },
+                    { text: "Heineken", correct: false, image: "images/heineken.jpg" },
+                    { text: "Budweiser", correct: false, image: "images/budweiser.jpg" },
+                    { text: "Guinness", correct: false, image: "images/guinness.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
