--- a/mindex.html
+++ b/mindex.html
@@ -1257,6 +1257,15 @@
                     { text: "Budweiser", correct: false, image: "images/budweiser.jpg" },
                     { text: "Guinness", correct: false, image: "images/guinness.jpg" }
                 ]
+            },
+            {
+                question: "Пейте овощи",
+                answers: [
+                    { text: "8 овощей", correct: true, image: "images/8ovoschey.jpg" },
+                    { text: "Добрый", correct: false, image: "images/dobriy.jpg" },
+                    { text: "Rich", correct: false, image: "images/rich.jpg" },
+                    { text: "Привет", correct: false, image: "images/privet.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
