--- a/mindex.html
+++ b/mindex.html
@@ -1266,6 +1266,15 @@
                     { text: "Rich", correct: false, image: "images/rich.jpg" },
                     { text: "Привет", correct: false, image: "images/privet.jpg" }
                 ]
+            },
+            {
+                question: "Не дай себе засохнуть!",
+                answers: [
+                    { text: "Sprite", correct: true, image: "images/sprite.jpg" },
+                    { text: "Fanta", correct: false, image: "images/fanta.jpg" },
+                    { text: "7UP", correct: false, image: "images/7up.jpg" },
+                    { text: "Schweppes", correct: false, image: "images/shweps.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
