--- a/mindex.html
+++ b/mindex.html
@@ -1275,6 +1275,15 @@
                     { text: "7UP", correct: false, image: "images/7up.jpg" },
                     { text: "Schweppes", correct: false, image: "images/shweps.jpg" }
                 ]
+            },
+            {
+                question: "Вливайся!",
+                answers: [
+                    { text: "Fanta", correct: true, image: "images/fanta2.jpg" },
+                    { text: "Sprite", correct: false, image: "images/sprite2.jpg" },
+                    { text: "Mirinda", correct: false, image: "images/mirinda2.jpg" },
+                    { text: "Schweppes", correct: false, image: "images/shweps2.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
