--- a/mindex.html
+++ b/mindex.html
@@ -1284,6 +1284,15 @@
                     { text: "Mirinda", correct: false, image: "images/mirinda2.jpg" },
                     { text: "Schweppes", correct: false, image: "images/shweps2.jpg" }
                 ]
+            },
+            {
+                question: "Просто добавь воды",
+                answers: [
+                    { text: "Инвайт", correct: true, image: "images/invite.jpg" },
+                    { text: "Zuko", correct: false, image: "images/zuko.jpg" },
+                    { text: "Yupi", correct: false, image: "images/yupi.jpg" },
+                    { text: "Tandy", correct: false, image: "images/tandy.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
