--- a/mindex.html
+++ b/mindex.html
@@ -1293,6 +1293,15 @@
                     { text: "Yupi", correct: false, image: "images/yupi.jpg" },
                     { text: "Tandy", correct: false, image: "images/tandy.jpg" }
                 ]
+            },
+            {
+                question: "Бери от жизни всё",
+                answers: [
+                    { text: "Pepsi", correct: true, image: "images/pepsi5.jpg" },
+                    { text: "Coca-Cola", correct: false, image: "images/cocacola5.jpg" },
+                    { text: "Mirinda", correct: false, image: "images/mirinda5.jpg" },
+                    { text: "Schweppes", correct: false, image: "images/shweps5.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
