--- a/mindex.html
+++ b/mindex.html
@@ -1302,6 +1302,15 @@
                     { text: "Mirinda", correct: false, image: "images/mirinda5.jpg" },
                     { text: "Schweppes", correct: false, image: "images/shweps5.jpg" }
                 ]
+            },
+            {
+                question: "Вкус победы!",
+                answers: [
+                    { text: "Херши Кола", correct: true, image: "images/herschi6.jpg" },
+                    { text: "Coca-Cola", correct: false, image: "images/cocacola6.jpg" },
+                    { text: "Pepsi", correct: false, image: "images/pepsi6.jpg" },
+                    { text: "Dr Pepper", correct: false, image: "images/drpeper6.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
