--- a/mindex.html
+++ b/mindex.html
@@ -1311,6 +1311,15 @@
                     { text: "Pepsi", correct: false, image: "images/pepsi6.jpg" },
                     { text: "Dr Pepper", correct: false, image: "images/drpeper6.jpg" }
                 ]
+            },
+            {
+                question: "Жизнь хороша, когда пьёшь не спеша",
+                answers: [
+                    { text: "Mirinda", correct: true, image: "images/mirinda6.jpg" },
+                    { text: "Fanta", correct: false, image: "images/fanta6.jpg" },
+                    { text: "Sprite", correct: false, image: "images/sprite6.jpg" },
+                    { text: "Schweppes", correct: false, image: "images/shweps6.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
