--- a/mindex.html
+++ b/mindex.html
@@ -1320,6 +1320,15 @@
                     { text: "Sprite", correct: false, image: "images/sprite6.jpg" },
                     { text: "Schweppes", correct: false, image: "images/shweps6.jpg" }
                 ]
+            },
+            {
+                question: "Жизнь — хорошая штука. Как ни крути",
+                answers: [
+                    { text: "Rich", correct: true, image: "images/rich.jpg" },
+                    { text: "Добрый", correct: false, image: "images/dobriy2.jpg" },
+                    { text: "Привет", correct: false, image: "images/privet.jpg" },
+                    { text: "8 овощей", correct: false, image: "images/8ovoschey.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
