--- a/mindex.html
+++ b/mindex.html
@@ -1329,6 +1329,15 @@
                     { text: "Привет", correct: false, image: "images/privet.jpg" },
                     { text: "8 овощей", correct: false, image: "images/8ovoschey.jpg" }
                 ]
+            },
+            {
+                question: "Живой апельсиновый сок",
+                answers: [
+                    { text: "Привет", correct: true, image: "images/privet.jpg" },
+                    { text: "Добрый", correct: false, image: "images/dobriy2.jpg" },
+                    { text: "Rich", correct: false, image: "images/rich.jpg" },
+                    { text: "Я", correct: false, image: "images/ya.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
