--- a/mindex.html
+++ b/mindex.html
@@ -1338,6 +1338,15 @@
                     { text: "Rich", correct: false, image: "images/rich.jpg" },
                     { text: "Я", correct: false, image: "images/ya.jpg" }
                 ]
+            },
+            {
+                question: "Малыши вдохновляют",
+                answers: [
+                    { text: "Pampers", correct: true, image: "images/pampers.jpg" },
+                    { text: "Huggies", correct: false, image: "images/huggies.jpg" },
+                    { text: "Libero", correct: false, image: "images/libero.jpg" },
+                    { text: "Muumi", correct: false, image: "images/muumi.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
