--- a/mindex.html
+++ b/mindex.html
@@ -1356,7 +1356,16 @@
                     { text: "Naturella", correct: false, image: "images/naturella.jpg" },
                     { text: "Kotex", correct: false, image: "images/kotex.jpg" }
                 ]
-            },			
+            },
+            {
+                question: "Перхоти нет",
+                answers: [
+                    { text: "Clear Vita Abe", correct: true, image: "images/clear.jpg" },
+                    { text: "Head & Shoulders", correct: false, image: "images/head.jpg" },
+                    { text: "Pantene", correct: false, image: "images/pantene.jpg" },
+                    { text: "Schauma", correct: false, image: "images/schauma.jpg" }
+                ]
+            },				
             {
 				question: "Цены просто о*уеть",
 					answers: [
