--- a/mindex.html
+++ b/mindex.html
@@ -1365,7 +1365,16 @@
                     { text: "Pantene", correct: false, image: "images/pantene.jpg" },
                     { text: "Schauma", correct: false, image: "images/schauma.jpg" }
                 ]
-            },				
+            },
+            {
+                question: "Заботься о себе",
+                answers: [
+                    { text: "Garnier", correct: true, image: "images/fructis.jpg" },
+                    { text: "L’Oréal", correct: false, image: "images/elseve.jpg" },
+                    { text: "Nivea", correct: false, image: "images/nivea.jpg" },
+                    { text: "Dove", correct: false, image: "images/dove.jpg" }
+                ]
+            },						
             {
 				question: "Цены просто о*уеть",
 					answers: [
