--- a/mindex.html
+++ b/mindex.html
@@ -1374,7 +1374,16 @@
                     { text: "Nivea", correct: false, image: "images/nivea.jpg" },
                     { text: "Dove", correct: false, image: "images/dove.jpg" }
                 ]
-            },						
+            },
+            {
+                question: "Миллионы микробов умрут",
+                answers: [
+                    { text: "Domestos", correct: true, image: "images/domestos2.jpg" },
+                    { text: "Comet", correct: false, image: "images/comet2.jpg" },
+                    { text: "Мистер Пропер", correct: false, image: "images/mrproper2.jpg" },
+                    { text: "Белизна", correct: false, image: "images/belizna2.jpg" }
+                ]
+            },			
             {
 				question: "Цены просто о*уеть",
 					answers: [
