--- a/mindex.html
+++ b/mindex.html
@@ -1383,6 +1383,15 @@
                     { text: "Мистер Пропер", correct: false, image: "images/mrproper2.jpg" },
                     { text: "Белизна", correct: false, image: "images/belizna2.jpg" }
                 ]
+            },
+            {
+                question: "Никогда не подведёт",
+                answers: [
+                    { text: "Rexona", correct: true, image: "images/rexona3.jpg" },
+                    { text: "Nivea", correct: false, image: "images/nivea3.jpg" },
+                    { text: "Dove", correct: false, image: "images/dove3.jpg" },
+                    { text: "Fa", correct: false, image: "images/fa3.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
