--- a/mindex.html
+++ b/mindex.html
@@ -1392,6 +1392,15 @@
                     { text: "Dove", correct: false, image: "images/dove3.jpg" },
                     { text: "Fa", correct: false, image: "images/fa3.jpg" }
                 ]
+            },
+            {
+                question: "Самая вкусная защита от кариеса",
+                answers: [
+                    { text: "Orbit", correct: true, image: "images/orbit3.jpg" },
+                    { text: "Dirol", correct: false, image: "images/dirol3.jpg" },
+                    { text: "Stimorol", correct: false, image: "images/stimorol3.jpg" },
+                    { text: "Eclipse", correct: false, image: "images/eclipse3.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
