--- a/mindex.html
+++ b/mindex.html
@@ -1401,6 +1401,15 @@
                     { text: "Stimorol", correct: false, image: "images/stimorol3.jpg" },
                     { text: "Eclipse", correct: false, image: "images/eclipse3.jpg" }
                 ]
+            },
+            {
+                question: "Лучше для мужчины нет",
+                answers: [
+                    { text: "Gillette", correct: true, image: "images/gillette.jpg" },
+                    { text: "Braun", correct: false, image: "images/braun.jpg" },
+                    { text: "Philips", correct: false, image: "images/philips.jpg" },
+                    { text: "Wilkinson", correct: false, image: "images/wilkinson.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
